--- a/TsetConsoleApp/TestConsoleApp.csproj
+++ b/TsetConsoleApp/TestConsoleApp.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ScrillaLib\ScrillaLib.csproj" />
+    <ProjectReference Include="..\Scrilla.Lib\Scrilla.Lib.csproj" />
   </ItemGroup>
 
 </Project>
